--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,6 @@ monitor_speed = 115200
 
 [env:esp32dev]
 board = esp32dev
+build_flags = 
+    -DBOARD_HAS_PSRAM 
+    -mfix-esp32-psram-cache-issue
